[project]
name = "project-1"
version = "0.1.0"
description = ""
authors = [
    {name = "DXWSL",email = "evanyifanz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "kera (>=1.2.1,<2.0.0)",
    "keras (>=3.11.3,<4.0.0)",
    "tensorflow (>=2.20.0,<3.0.0)",
    "shap (>=0.48.0,<0.49.0)",
    "xgboost (>=3.0.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
